...
                app:layout_collapseMode="parallax"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp">

                <!-- Welcome Message above logo -->
                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="Hello, Jacob!"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
...
